jsonschemadsl2ecore.trafo.opt/test/test103/invalidtests/example4.test103
{
	"ale": {
		"runs-on":1
	} ,
	"prop1":"aaaaaaaaaaaa",
	"prop2":1,
	"prop3":null,
	"prop4":2
}                 